# vibeplan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  roadmap.md
examples/fastapi-jwt-auth/: README.md
src/vibeplan/: __init__.py  benchmark.py  budget.py  checkpoint.py  cli.py  config.py  github.py  llm.py  mcp_server.py  planner.py  questions.py  runner.py  team.py  web_ui.py
src/vibeplan/adapters/: __init__.py  antigravity.py  base.py  claude_code.py  codex.py  opencode.py
tests/: test_adapters.py  test_benchmark.py  test_budget.py  test_checkpoint.py  test_config.py  test_github.py  test_llm.py  test_mcp.py  test_planner.py  test_runner.py  test_team.py  test_web_ui.py
